Create empty working files and full problem files

--- a/Elevator.ipynb
+++ b/Elevator.ipynb
@@ -5,7 +5,36 @@
    "id": "3affa078-4c71-4951-b571-5173679be0b7",
    "metadata": {},
    "source": [
-    "## Designing an Elevator "
+    "## Elevator problem\n",
+    "\n",
+    "This is a design problem that will ask for some pseudo-code to illustrate your ideas.\n",
+    "The thought process is more important than syntax or programming details, so don't\n",
+    "worry too much about those. In this problem, we will start with a very simple set of requirements\n",
+    "and add some more later.\n",
+    "\n",
+    "Please **feel free to ask clarifying questions at any point**. Understanding the requirements, here as in\n",
+    "real life, is part of the challenge."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "671d5f76-d5da-4f0a-8343-089a36eb9d22",
+   "metadata": {},
+   "source": [
+    "## The problem, Part 1\n",
+    "\n",
+    "Create a class to represent an elevator in a hotel.\n",
+    "The only thing the elevator can do is go to a different floor.\n",
+    "Details of people pressing buttons are not included for this part.\n",
+    "\n",
+    "The elevator could print out its current state like this:\n",
+    "```\n",
+    "Floor 1\n",
+    "Floor 3\n",
+    "Floor 1\n",
+    "Floor 7\n",
+    "..etc..\n",
+    "```"
    ]
   },
   {
@@ -14,7 +43,12 @@
    "id": "a34dc3c7-c71b-42a2-9f37-cd2348d50830",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Add your code/pseudo-code \n",
+    "\n",
+    "class Elevator:\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
