Update Elevator details

--- a/Elevator-full.ipynb
+++ b/Elevator-full.ipynb
@@ -60,11 +60,13 @@
     "\n",
     "The elevator could print out its current state like this:\n",
     "```\n",
-    "Floor 1\n",
+    "Elevator on Floor 1\n",
     "Person on Floor 3 presses Down button\n",
-    "Floor 3\n",
+    "Elevator on Floor 3\n",
+    "1 Person gets in elevator\n",
     "Person in elevator presses Floor 1\n",
-    "Floor 1\n",
+    "Elevator on Floor 1\n",
+    "1 Person gets out of elevator\n",
     "..etc..\n",
     "```"
    ]
@@ -115,29 +117,38 @@
     "\n",
     "The output from the scenario above could look like this:\n",
     "```\n",
+    " \n",
     "Time  Action/Status\n",
     "0     Stopped at Floor 1\n",
     "1     Person on Floor 3 presses Down button\n",
     "1     Going to Floor 3\n",
-    "2     Person on Floor 2 presses Down button\n",
     "2     Going to Floor 3\n",
-    "9     Stop at Floor 3\n",
-    "9     Person enters the elevator\n",
-    "10    Person inside presses Floor 1 button\n",
-    "11    Going to Floor 2\n",
-    "14    Stop at Floor 2\n",
-    "14    Person enters the elevator\n",
-    "15    Going to Floor 1\n",
-    "17    Stop at Floor 1\n",
-    "18    2 people exit the elevator\n",
-    "19    Stopped at Floor 1\n",
+    "2     Person on Floor 2 presses Down button\n",
+    "3     Passing Floor 2\n",
+    "4     Going to Floor 3\n",
+    "5     Going to Floor 3\n",
+    "6     Arrive at Floor 3\n",
+    "7     Pause at floor 3\n",
+    "7     Person enters the elevator\n",
+    "7     Person inside presses Floor 1 button\n",
+    "8     Going to Floor 2\n",
+    "9     Going to Floor 2\n",
+    "10    Arrive at Floor 2\n",
+    "11    Pause at Floor 2\n",
+    "11    Person enters the elevator\n",
+    "12    Going to Floor 1\n",
+    "13    Going to Floor 1\n",
+    "14    Arrive at Floor 1\n",
+    "15    Pause at Floor 1\n",
+    "15    2 people exit the elevator\n",
+    "16    ...\n",
     "...etc...\n",
     "```\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bace043c-623e-40eb-a413-9049383a7068",
    "metadata": {},
    "outputs": [],
